--- a/index.html
+++ b/index.html
@@ -2,13 +2,20 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <title></title>
+    <title>Memory Game</title>
     <link rel="stylesheet" href="css/main.css">
   </head>
   <body>
 
-  </body>
-  <script src="js/script.js">
+    <div class="container">
 
-  </script>
+      <div class="row">
+        <h1 class="titolo"> MEMORY GAME </h1>
+        <h1 id="title" class="titolo blu"></h1>
+      </div>
+
+    </div>
+
+  </body>
+  <script src="js/script.js"></script>
 </html>
